networking/virtual-service-header.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews-header-routing
spec:
  hosts:
    - reviews
  http:
    - match:
        - headers:
            end-user:
              exact: "jason"
      route:
        - destination:
            host: reviews
            subset: v2
          weight: 100
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 100
