networking/virtual-service-ratings-test-delay-50-percent.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percentage:
          value: 50.0
        fixedDelay: 7s
    route:
    - destination:
        host: ratings
        subset: v1
